# tranquil

./: .gitignore  Cargo.toml  README.md  pyproject.toml
rust/src/: codex_audit.rs  config.rs  evals.rs  http.rs  ingest.rs  init.rs  main.rs  mcp.rs  normalize.rs  notifications.rs  otel.rs  policy.rs  sqlite.rs  storage.rs  suites.rs  tailer.rs  team_sync.rs  tui.rs  util.rs
src/tranquil/: __init__.py  app.py  cli.py  codex_audit.py  config.py  evals.py  hook_forwarder.py  init.py  mcp.py  normalize.py  notifications.py  otel.py  policy.py  server.py  signals.py  storage.py  suites.py  tailer.py  team_sync.py  tui.py  util.py
src/tranquil/web/: app.js  index.html  styles.css
tests/: test_tranquil.py
