[package]
name = "tranquil"
version = "0.1.0"
edition = "2024"
description = "Local-first, terminal-native eval and observability for coding agents."
license = "MIT"

[[bin]]
name = "tranquil"
path = "rust/src/main.rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
